add netka firebase script

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -107,6 +107,9 @@
     <!-- Apple devices Homescreen icon -->
     <link rel="apple-touch-icon-precomposed" href="~/img/apple-touch-icon-precomposed.png" />
 
+    <!-- connect firebase -->
+    <script src="~/js/NetkaPIFirebaseScript.js"></script>
+
 </head>
 <body>
     <!--<nav class="navbar navbar-inverse navbar-fixed-top">
