--- a/Views/PI/Add_PI.cshtml
+++ b/Views/PI/Add_PI.cshtml
@@ -1,11 +1,12 @@
-﻿
+﻿@model netka_pi.Models.AddPIData
+
 @{
-    ViewData["Title"] = "Add Process Issue Log";
+    ViewData["Title"] = "Add Issue Log";
 }
 
 <div class="page-header">
     <div class="pull-left">
-        <h1>Add Process Issue Log</h1>
+        <h1>Add Issue Log</h1>
     </div>
     <div class="pull-right">
     </div>
@@ -35,59 +36,66 @@
                 <h3><i class="icon-th-list"></i> Issue</h3>
             </div>
             <div class="box-content nopadding">
-                <form action="#" method="POST" class='form-horizontal form-bordered'>
-                    <div class="control-group">
-                        <label for="textfield" class="control-label">Originator name</label>
-                        <div class="controls">
-                            <input type="text" name="originator_name" id="originator_name" placeholder="" class="input-xlarge">
+                 @using (Html.BeginForm("add_pi_process", "PI", FormMethod.Post, new { enctype = "multipart/form-data", @class = "form-horizontal form-bordered" }))
+                 {
+                        <div class="control-group">
+                            <label for="IssueNO" class="control-label">Issue No.</label>
+                            <div class="controls">
+                                <input type="text" name="Issue_No" id="Issue_No" placeholder="" class="input-small">
+                            </div>
                         </div>
-                    </div>
-                    <div class="control-group">
-                        <label for="textfield" class="control-label">Date Raised</label>
-                        <div class="controls">
-                            <input type="text" name="date_raised" id="date_raised" placeholder="" class="input-medium datepicker">
-                            <span class="help-block">Date format -> mm/dd/yy</span>
+                        <div class="control-group">
+                            <label for="OriginatorName" class="control-label">Originator name</label>
+                            <div class="controls">
+                                <input type="text" name="Originator_Name" id="Originator_Name" placeholder="" class="input-xlarge">
+                            </div>
                         </div>
-                    </div>
-                    <div class="control-group">
-                        <label for="textfield" class="control-label">Item Name</label>
-                        <div class="controls">
-                            <input type="text" name="item_name" id="item_name" placeholder="" class="input-xlarge">
+                        <div class="control-group">
+                            <label for="DateRaised" class="control-label">Date Raised</label>
+                            <div class="controls">
+                                <input type="text" name="Date_Raised" id="Date_Raised" placeholder="" class="input-medium datepicker">
+                                <span class="help-block">Date format -> mm/dd/yy</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="control-group">
-                        <label for="textfield" class="control-label">Title</label>
-                        <div class="controls">
-                            <input type="text" name="title" id="title" placeholder="" class="input-xlarge">
+                        <div class="control-group">
+                            <label for="ItemName" class="control-label">Item Name</label>
+                            <div class="controls">
+                                <input type="text" name="Item_Name" id="Item_Name" placeholder="" class="input-xlarge">
+                            </div>
                         </div>
-                    </div>
-                    <div class="control-group">
-                        <label for="select" class="control-label">Process</label>
-                        <div class="controls">
-                            <select name="process" id="process" class='input-xlarge'>
-                                <option value="1">Option-1</option>
-                                <option value="2">Option-2</option>
-                                <option value="3">Option-3</option>
-                                <option value="4">Option-4</option>
-                                <option value="5">Option-5</option>
-                                <option value="6">Option-6</option>
-                                <option value="7">Option-7</option>
-                                <option value="8">Option-8</option>
-                                <option value="9">Option-9</option>
-                            </select>
+                        <div class="control-group">
+                            <label for="Title" class="control-label">Title</label>
+                            <div class="controls">
+                                <input type="text" name="Title" id="Title" placeholder="" class="input-xlarge">
+                            </div>
                         </div>
-                    </div>
-                    <div class="control-group">
-                        <label for="textarea" class="control-label">Issue Description</label>
-                        <div class="controls">
-                            <textarea name="issue_description" id="issue_description" rows="5" class="input-block-level"></textarea>
+                        <div class="control-group">
+                            <label for="Process" class="control-label">Process</label>
+                            <div class="controls">
+                                <select name="Process" id="Process" class='input-xlarge'>
+                                    <option value="1">Option-1</option>
+                                    <option value="2">Option-2</option>
+                                    <option value="3">Option-3</option>
+                                    <option value="4">Option-4</option>
+                                    <option value="5">Option-5</option>
+                                    <option value="6">Option-6</option>
+                                    <option value="7">Option-7</option>
+                                    <option value="8">Option-8</option>
+                                    <option value="9">Option-9</option>
+                                </select>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-actions">
-                        <button type="submit" class="btn btn-primary">Save changes</button>
-                        <button type="button" class="btn">Cancel</button>
-                    </div>
-                </form>
+                        <div class="control-group">
+                            <label for="IssueDescription" class="control-label">Issue Description</label>
+                            <div class="controls">
+                                <textarea name="Issue_Description" id="Issue_Description" rows="5" class="input-block-level"></textarea>
+                            </div>
+                        </div>
+                        <div class="form-actions">
+                            <button type="submit" class="btn btn-primary">Add</button>
+                            <button type="button" class="btn">Cancel</button>
+                        </div>
+                    }
             </div>
         </div>
     </div>
@@ -97,7 +105,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.min.js"></script>
     <script>
-        $('#date_raised').datepicker({format: 'mm/dd/yy' });
+        $('#date_raised').datepicker({ format: 'mm/dd/yy' });
     </script>
 }
 
