--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <!-- Apple devices fullscreen -->
     <meta names="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <title>@ViewData["Title"] - netka_pi</title>
+    <title>@ViewData["Title"]</title>
 
     <!--<environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -107,9 +107,6 @@
     <!-- Apple devices Homescreen icon -->
     <link rel="apple-touch-icon-precomposed" href="~/img/apple-touch-icon-precomposed.png" />
 
-    <!-- connect firebase -->
-    <script src="~/js/NetkaPIFirebaseScript.js"></script>
-
 </head>
 <body>
     <!--<nav class="navbar navbar-inverse navbar-fixed-top">
@@ -134,7 +131,7 @@
     </nav>
 
     <partial name="_CookieConsentPartial" />
-
+    
     <div class="container body-content">
 
         <hr />
