--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -5,3 +5,17 @@
 <h3>@ViewData["Message"]</h3>
 
 <p>Use this area to provide additional information.</p>
+
+@{
+    ViewBag.Title = "About";
+}
+<h2>@ViewBag.Title</h2>
+
+<h3>Login History</h3>
+<p>Current user: @ViewBag.CurrentUser</p>
+<ul>
+    @foreach (var timestamp in ViewBag.Logins)
+    {
+        <li>Login at @timestamp</li>
+    }
+</ul>
