--- a/Views/PI/Index.cshtml
+++ b/Views/PI/Index.cshtml
@@ -34,8 +34,11 @@
         <a href="#"><i class="icon-remove"></i></a>
     </div>
 </div>
+
+
 <div class="row-fluid">
     <div class="span12">
+
 
         <div class="box box-color box-bordered">
             <div class="box-title">
@@ -45,94 +48,46 @@
                 </h3>
             </div>
             <div class="box-content nopadding">
-                <table class="table table-hover table-nomargin">
+                <table class="table table-hover table-nomargin table-bordered dataTable">
                     <thead>
                         <tr>
                             <th>Issue No.</th>
                             <th>Title</th>
+                            <th class='hidden-1024'>Issue Description</th>
                             <th class='hidden-350'>Originator</th>
                             <th class='hidden-1024'>Process</th>
-                            <th class='hidden-1024'>Category</th>
-                            <th class='hidden-1024'>Severity</th>
+                            <!--<th class='hidden-1024'>Category</th>-->
+                            <!--<th class='hidden-1024'>Severity</th>-->
                             <th class='hidden-1024'>Status</th>
                             <th class='hidden-1024'>Date Raised</th>
-                            <th class='hidden-1024'>Date Resolved</th>
+                            <!--<th class='hidden-1024'>Date Resolved</th>-->
                             <th class='hidden-1024'>Issue Age</th>
-                            <th class='hidden-1024'>Remark</th>
+                            <!--<th class='hidden-1024'>Remark</th>-->
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>Issue1</td>
-                            <td> bug1 </td>
-                            <td class='hidden-350'> bo </td>
-                            <td class='hidden-1024'>5</td>
-                            <td class='hidden-1024'>2</td>
-                            <td class='hidden-1024'>medium</td>
-                            <td class='hidden-1024'>new</td>
-                            <td class='hidden-1024'>15/08/2019</td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'>test</td>
-                        </tr>
-                        <tr>
-                            <td>Issue2</td>
-                            <td></td>
-                            <td class='hidden-350'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                        </tr>
-                        <tr>
-                            <td>Issue3</td>
-                            <td></td>
-                            <td class='hidden-350'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                        </tr>
-                        <tr>
-                            <td>Issue4</td>
-                            <td></td>
-                            <td class='hidden-350'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                        </tr>
-                        <tr>
-                            <td>Issue5</td>
-                            <td></td>
-                            <td class='hidden-350'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                            <td class='hidden-1024'></td>
-                        </tr>
+                        @foreach (var data in ViewBag.IssueLog)
+                        {
+
+                            <tr>
+                                <td>@data.Issue_No</td>
+                                <td>@data.Title</td>
+                                <td class='hidden-1024'>@data.Issue_Description</td>
+                                <td class='hidden-350'>@data.Originator_Name</td>
+                                <td class='hidden-1024'>@data.Process</td>
+                                <!--<td class='hidden-1024'>@data.Category</td>-->
+                                <!--<td class='hidden-1024'>@data.Severity</td>-->
+                                <td class='hidden-1024'>@data.Status</td>
+                                <td class='hidden-1024'>@data.Date_Raised</td>
+                                <!--<td class='hidden-1024'>@data.Date_Resolved</td>-->
+                                <td class='hidden-1024'></td>
+                                <!--<td class='hidden-1024'></td>-->
+                            </tr>
+                        }
                     </tbody>
                 </table>
             </div>
         </div>
-
-
 
     </div>
 </div>
